--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=AsyncWebServer_STM32
-version=1.2.3
+version=1.2.3a
 author=Hristo Gochkov,Khoi Hoang
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
 license=MIT
