--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -27,9 +27,14 @@ upload_speed = 921600
 ;monitor_port = COM11
 
 lib_deps =
+; PlatformIO 4.x 
   STM32duino LwIP@~2.1.2
   STM32duino STM32Ethernet@~1.2.0
   STM32AsyncTCP
+; PlatformIO 5.x  
+;  stm32duino/STM32duino LwIP@~2.1.2
+;  stm32duino/STM32duino STM32Ethernet@~1.2.0
+;  philbowles/STM32AsyncTCP
 
 build_flags =
 ; set your build_flags
