--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -30,7 +30,7 @@ lib_deps =
 ; PlatformIO 4.x 
   STM32duino LwIP@~2.1.2
   STM32duino STM32Ethernet@~1.2.0
-  STM32AsyncTCP
+  khoih-prog/STM32AsyncTCP
 ; PlatformIO 5.x  
 ;  stm32duino/STM32duino LwIP@~2.1.2
 ;  stm32duino/STM32duino STM32Ethernet@~1.2.0
