--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -38,6 +38,20 @@ lib_deps =
 
 build_flags =
 ; set your build_flags
+;-DSTM32F0
+;-DSTM32F1
+;-DSTM32F2
+;-DSTM32F3
+;-DSTM32F4
+-DSTM32F7
+;-DSTM32L0
+;-DSTM32L1
+;-DSTM32L4
+;-DSTM32H7
+;-DSTM32G0
+;-DSTM32G4
+;-DSTM32WB
+;-DSTM32MP1
  
 [env:STM32]
 platform = ststm32
