--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=AsyncWebServer_STM32
-version=1.2.4
+version=1.2.5
 author=Hristo Gochkov,Khoi Hoang
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
 license=MIT
@@ -9,3 +9,4 @@ category=Communication,AsyncWebServer
 url=https://github.com/khoih-prog/AsyncWebServer_STM32
 architectures=stm32
 depends=STM32duino LwIP,STM32duino STM32Ethernet,STM32AsyncTCP
+includes=LwIP.h,STM32Ethernet.h,AsyncWebServer_STM32.h
