--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=AsyncWebServer_STM32
-version=1.2.6
+version=1.3.0
 author=Hristo Gochkov,Khoi Hoang
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
 license=MIT
-sentence=AsyncWebServer for STM32 using builtin LAN8742A Ethernet
-paragraph=This AsyncWebServer Library for STM32 is currently working on STM32 boards, such as Nucleo-144 F767ZI, etc., using builtin LAN8742A Ethernet
+sentence=AsyncWebServer for STM32F/L/H/G/WB/MP1 using LAN8720 or builtin LAN8742A Ethernet
+paragraph=This AsyncWebServer Library for STM32 is currently working on STM32F/L/H/G/WB/MP1 boards, such as Nucleo-144 F767ZI, etc., using LAN8720 or builtin LAN8742A Ethernet
 category=Communication,AsyncWebServer
 url=https://github.com/khoih-prog/AsyncWebServer_STM32
 architectures=stm32
