--- a/library.properties
+++ b/library.properties
@@ -1,12 +1,13 @@
 name=AsyncWebServer_STM32
-version=1.5.0
+version=1.6.0
 author=Hristo Gochkov,Khoi Hoang
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
-license=MIT
 sentence=AsyncWebServer for STM32F/L/H/G/WB/MP1 using LAN8720 or builtin LAN8742A Ethernet
-paragraph=This AsyncWebServer Library for STM32 is currently working on STM32F/L/H/G/WB/MP1 boards, such as Nucleo-144 F767ZI, etc., using LAN8720 or builtin LAN8742A Ethernet
+paragraph=This AsyncWebServer Library for STM32 is currently working on STM32F/L/H/G/WB/MP1 boards, such as Nucleo-144 F767ZI, etc., using LAN8720 or builtin LAN8742A Ethernet. Now support using CString to save heap to send very large data
 category=Communication,AsyncWebServer
 url=https://github.com/khoih-prog/AsyncWebServer_STM32
 architectures=stm32
+repository=https://github.com/khoih-prog/AsyncWebServer_STM32
+license=GPLv3
 depends=STM32duino LwIP,STM32duino STM32Ethernet
 includes=LwIP.h,STM32Ethernet.h,AsyncWebServer_STM32.h
