--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=AsyncWebServer_STM32
-version=1.6.0
+version=1.6.1
 author=Hristo Gochkov,Khoi Hoang
 maintainer=Khoi Hoang <khoih.prog@gmail.com>
 sentence=AsyncWebServer for STM32F/L/H/G/WB/MP1 using LAN8720 or builtin LAN8742A Ethernet
-paragraph=This AsyncWebServer Library for STM32 is currently working on STM32F/L/H/G/WB/MP1 boards, such as Nucleo-144 F767ZI, etc., using LAN8720 or builtin LAN8742A Ethernet. Now support using CString to save heap to send very large data
+paragraph=This AsyncWebServer Library for STM32 is currently working on STM32F/L/H/G/WB/MP1 boards, such as Nucleo-144 F767ZI, etc., using LAN8720 or builtin LAN8742A Ethernet. Now support using CString to save heap to send very large data and examples to demo how to use beginChunkedResponse() to send large html in chunks
 category=Communication,AsyncWebServer
 url=https://github.com/khoih-prog/AsyncWebServer_STM32
 architectures=stm32
